# harmoniis-wallet

./: .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  README.md  SESSION-HANDLER.md  install.ps1  install.sh  skill.md  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
scripts/: build_release.sh  prepare_project_test_wallets.sh  prove_mnemonic_rebuild.sh
src/: arbiter.rs  ark.rs  bitcoin.rs  config.rs  crypto.rs  error.rs  identity.rs  keychain.rs  lib.rs  securities.rs  types.rs  vault.rs  voucher_wallet.rs  wallet.rs
src/actors/: ark_actor.rs  bitcoin_actor.rs  mod.rs  payment_ledger_actor.rs  voucher_actor.rs  wallet_actor.rs  webcash_actor.rs
src/client/: arbiter.rs  arbitration.rs  mod.rs  recovery.rs  timeline.rs  voucher.rs  witness.rs
src/marketplace/: arbiter.rs  arbitration.rs  identities.rs  mod.rs  posts.rs  storage.rs  timeline.rs  voucher.rs  witness.rs
src/miner/: clock_skew.rs  collect.rs  composite.rs  cpu.rs  cuda.rs  cuda_detect.rs  cuda_install.rs  daemon.rs  gpu.rs  hybrid.rs  mod.rs  multi_cuda.rs  multi_gpu.rs  nonce_table.rs  persistent_cuda.rs  protocol.rs  sha256.rs  simd_cpu.rs  snapshot.rs  stats.rs  work_unit.rs
src/miner/cloud/: config.rs  dispatch.rs  mod.rs  provision.rs  recovery.rs  slots.rs  ssh.rs  vast.rs
src/miner/shader/: sha256_mine.comp  sha256_mine.cu  sha256_mine.ptx  sha256_mine.spv  sha256_mine.wgsl  sha256_mine_opt.spv  sha256_mine_persistent.cu
src/wallet/: ark.rs  bitcoin.rs  browser_wallet.rs  contracts.rs  core.rs  idb.rs  identities.rs  keychain.rs  labeled_wallets.rs  mod.rs  payments.rs  schema.rs  snapshots.rs  storage.rs  store.rs  store_mem.rs  store_sqlite.rs  vault.rs  voucher.rs  webcash.rs
tests/: integration_flow.rs  local_sim.rs  unit_tests.rs
tests/unit/: crypto.rs  mod.rs  types.rs  wallet.rs
