[package]
name        = "harmoniis-wallet"
version     = "0.1.54"
edition     = "2021"
rust-version = "1.86"
description = "Smart-contract wallet for the Harmoniis decentralised marketplace (RGB contracts, Witness-backed bearer state, Webcash fees)"
license     = "MIT"
homepage    = "https://harmoniis.com"
repository  = "https://github.com/harmoniis/harmoniis-wallet"
documentation = "https://docs.rs/harmoniis-wallet"
readme      = "README.md"
keywords    = ["harmoniis", "rgb", "webcash", "smart-contracts", "wallet"]
categories  = ["cryptography", "cryptography::cryptocurrencies", "command-line-utilities"]
include     = [
    "src/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[lib]
name = "harmoniis_wallet"

[[bin]]
name = "hrmw"
path = "src/bin/hrmw.rs"

# ── Feature flags ──────────────────────────────────────────────────────────────
[features]
# Bundle SQLite from source — enables `cargo install` without system libsqlite3.
# Disable with `default-features = false` to link against the system library instead.
default = ["bundled-sqlite", "gpu", "cuda"]
bundled-sqlite = ["rusqlite/bundled"]
gpu = ["dep:wgpu"]
cuda = ["dep:cudarc"]

# DORMANT — Phase 3 security tokens (ContractBasket, Bond, RevenueShare).
# Do NOT enable in production. Dependency order:
#   Phase 1 (live)    — RGB21 Contract + Certificate
#   Phase 2 (sandbox) — RGB20 Stablecash / USDH
#   Phase 3 (dormant) — securities (this feature)
securities = []

# Actix actor wrappers for wallet components.
# Enable when using harmoniis-wallet in an actix-web backend.
actix-actors = ["dep:actix", "dep:actix-rt"]


# ── Dependencies ───────────────────────────────────────────────────────────────
[dependencies]
# Core
anyhow      = "1.0"
thiserror   = "2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# Cryptography
sha2        = { version = "0.10", features = ["compress"] }
hkdf        = "0.12"
hex         = "0.4"
bip39       = "2.1"
rand        = "0.8"
rand_core   = "0.6"
zeroize     = { version = "1.8", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
curve25519-dalek = "4"
x25519-dalek = "2"
chacha20poly1305 = "0.10"
pkcs8       = { version = "0.10", features = ["pem"] }

# Storage
rusqlite    = { version = "0.37" }   # bundled-sqlite feature adds rusqlite/bundled

# Networking (rustls: no OpenSSL dependency — cross-platform)
reqwest     = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio       = { version = "1", features = ["full"] }

# CLI
clap        = { version = "4", features = ["derive"] }
dirs-next   = "2"
toml        = "0.8"

# Time
chrono      = { version = "0.4", features = ["serde"] }
webylib     = "0.1.0"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
bdk_wallet  = { version = "1.2", features = ["file_store"] }
bdk_esplora = "0.20"

# ARK protocol (Arkade ASP — offchain Bitcoin via VTXOs)
ark-client    = "0.8.0"
ark-bdk-wallet = "0.8.0"
ark-core      = "0.8.0"
ark-grpc      = "0.8.0"
rustls        = { version = "0.23", features = ["ring"] }

# Actix actors (optional, for backend integration)
actix       = { version = "0.13", optional = true }
actix-rt    = { version = "2", optional = true }

# Mining
wgpu        = { version = "28", optional = true, features = ["spirv"] }
rayon       = "1.10"
base64      = "0.22"
num-bigint  = "0.4"
signal-hook = "0.3"
async-trait = "0.1"
bytemuck    = { version = "1", features = ["derive"] }
libc        = "0.2"

# CUDA mining — works on any OS with an NVIDIA driver.
# `fallback-dynamic-loading` loads libcuda/nvcuda at runtime, so the binary
# can be compiled without the CUDA SDK and gracefully falls back to wgpu if
# no CUDA driver is present.
# CUDA 12.0 API — compatible with all drivers 525+.
# Library search finds nvrtc64_12*.dll / libnvrtc.so.12.
# catch_unwind in CudaMiner::try_new handles missing libs gracefully.
cudarc      = { version = "0.19.3", optional = true, default-features = false, features = [
    "std",
    "driver",
    "runtime",
    "nvrtc",
    "fallback-dynamic-loading",
    "cuda-12000",
] }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }
