[package]
name        = "harmoniis-wallet"
version     = "0.1.78"
edition     = "2021"
rust-version = "1.86"
description = "Smart-contract wallet for the Harmoniis marketplace for agents and robots (RGB contracts, Witness-backed bearer state, Webcash fees)"
license     = "MIT"
homepage    = "https://harmoniis.com"
repository  = "https://github.com/harmoniis/harmoniis-wallet"
documentation = "https://docs.rs/harmoniis-wallet"
readme      = "README.md"
keywords    = ["harmoniis", "rgb", "webcash", "smart-contracts", "wallet"]
categories  = ["cryptography", "cryptography::cryptocurrencies", "command-line-utilities"]
include     = [
    "src/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[lib]
name = "harmoniis_wallet"

[[bin]]
name = "hrmw"
path = "src/bin/hrmw.rs"
required-features = ["cli", "bitcoin", "ark"]


# ── Feature Flags ─────────────────────────────────────────────────
#
# Layer 0 — Core (no features needed, always compiled):
#   Pure crypto: keychain, vault, identity, types, crypto, config
#   Deps: sha2, hkdf, hex, bip39, bitcoin, ed25519-dalek, serde, chrono
#   Target: native + wasm32
#
# Layer 1 — Wallet (native feature):
#   SQLite-backed WalletCore, webcash ops via webylib, networking
#   Deps: rusqlite, webylib, reqwest, tokio, keyring
#   Target: native only
#
# Layer 2 — Protocols (bitcoin, ark features):
#   Bitcoin BDK, ARK VTXOs — require Layer 1
#   Deps: bdk_wallet, bdk_esplora, ark-client
#   Target: native only (WASM BDK/Ark planned separately)
#
# Layer 3 — Mining (gpu, cuda features):
#   GPU/CPU mining — requires Layer 1
#   Deps: wgpu, cudarc, rayon
#   Target: native only (WASM WebGPU planned)

[features]
default = ["native"]

# ── Layer 1: Full native wallet ───────────────────────────────
native = [
    "dep:webylib",
    "dep:rusqlite",
    "dep:reqwest",
    "dep:tokio",
    "dep:keyring",
    "dep:rustls",
    "dep:dirs-next",
    "dep:toml",
    "dep:image",
    "dep:signal-hook",
    "dep:libc",
    "dep:rayon",
    "bundled-sqlite",
    "gpu",
    "bitcoin",
    "ark",
    "cli",
]
bundled-sqlite = ["rusqlite?/bundled"]

# ── Layer 2: Protocol modules ─────────────────────────────────
bitcoin = ["dep:bdk_wallet", "dep:bdk_esplora"]
ark = ["dep:ark-client", "dep:ark-bdk-wallet", "dep:ark-core", "dep:ark-grpc"]

# ── Layer 3: Mining ───────────────────────────────────────────
gpu = ["dep:wgpu", "wgpu?/spirv"]
gpu-wasm = ["dep:wgpu", "wgpu?/webgpu"]
cuda = ["dep:cudarc"]

# ── WASM target ───────────────────────────────────────────────
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "getrandom/js"]

# ── Other optional features ───────────────────────────────────
cli = ["dep:clap"]
vendored-openssl = ["openssl/vendored"]
securities = []
actix-actors = ["dep:actix", "dep:actix-rt"]


# ── Dependencies ──────────────────────────────────────────────
[dependencies]

# ── Layer 0: Core (always available, WASM-safe) ──────────────
anyhow          = "1.0"
thiserror       = "2"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
sha2            = { version = "0.10", features = ["compress"] }
hkdf            = "0.12"
hex             = "0.4"
bip39           = "2.1"
bip32           = "0.5"
k256            = { version = "0.13", features = ["ecdsa"] }
rand            = "0.8"
rand_core       = "0.6"
getrandom       = "0.2"
zeroize         = { version = "1.8", features = ["derive"] }
ed25519-dalek   = { version = "2.1", features = ["rand_core", "pkcs8", "pem"] }
curve25519-dalek = "4"
x25519-dalek    = "2"
chacha20poly1305 = "0.10"
pkcs8           = { version = "0.10", features = ["pem"] }
chrono          = { version = "0.4", features = ["serde"] }
base64          = "0.22"
num-bigint      = "0.4"
async-trait     = "0.1"
bytemuck        = { version = "1", features = ["derive"] }

# ── Layer 1: Native wallet (optional) ────────────────────────
webylib         = { version = "0.3.0", optional = true }
rusqlite        = { version = "0.37", optional = true }
reqwest         = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false, optional = true }
tokio           = { version = "1", features = ["full"], optional = true }
keyring         = { version = "3", optional = true }
rustls          = { version = "0.23", features = ["ring"], optional = true }
dirs-next       = { version = "2", optional = true }
toml            = { version = "1.1", optional = true }
image           = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"], optional = true }
signal-hook     = { version = "0.4", optional = true }
libc            = { version = "0.2", optional = true }
rayon           = { version = "1.10", optional = true }

# ── Layer 2: Protocols (optional) ────────────────────────────
bdk_wallet      = { version = "3.0", features = ["file_store"], optional = true }
bdk_esplora     = { version = "0.22", features = ["tokio"], optional = true }
ark-client      = { version = "0.8.0", optional = true }
ark-bdk-wallet  = { version = "0.8.0", optional = true }
ark-core        = { version = "0.8.0", optional = true }
ark-grpc        = { version = "0.8.0", optional = true }

# ── Layer 3: Mining (optional) ───────────────────────────────
wgpu            = { version = "28", optional = true }
cudarc          = { version = "0.19.3", optional = true, default-features = false, features = [
    "std", "driver", "runtime", "nvrtc", "fallback-dynamic-loading", "cuda-12000",
] }

# ── CLI (optional) ───────────────────────────────────────────
clap            = { version = "4", features = ["derive"], optional = true }

# ── WASM (optional) ──────────────────────────────────────────
wasm-bindgen        = { version = "0.2", optional = true }
js-sys              = { version = "0.3", optional = true }
serde-wasm-bindgen  = { version = "0.6", optional = true }


# ── Cross-compile helpers (optional) ─────────────────────────
openssl         = { version = "0.10", optional = true }
actix           = { version = "0.13", optional = true }
actix-rt        = { version = "2", optional = true }


[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full"] }


[lints.clippy]
too_many_arguments = "allow"
needless_return = "allow"
field_reassign_with_default = "allow"
if_same_then_else = "allow"
unnecessary_lazy_evaluations = "allow"
large_enum_variant = "allow"
ptr_arg = "allow"
print_literal = "allow"
format_in_format_args = "allow"
